# battery-savior

./: Cargo.toml  battery-savior.toml  tray.rc
src/: main.rs
